mongodb connect example env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=
+MONGODB=mongodb+srv://user:user@cluster0.wbnuo.mongodb.net/test-code?authSource=MONGODB&authMechanism=SCRAM-SHA-1
