secret key in example env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=
 MONGODB=mongodb+srv://user:user@cluster0.wbnuo.mongodb.net/test-code?authSource=MONGODB&authMechanism=SCRAM-SHA-1
+SECRET_KEY=rama2000
